--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
   padding-top: 5rem;
+  margin-bottom: 60px;
 }
 .starter-template {
   padding: 3rem 1.5rem;
