--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,4 +11,15 @@
       <a class="nav-link" href="#">Contact</a>
     </li>
   </ul>
+  <ul class="nav navbar-nav pull-right">
+    <li class="nav-item">
+      <a class="nav-link" href="https://medium.com/@beeman"><i class="fa fa-medium" aria-hidden="true"></i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="https://twitter.com/@beeman_nl"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="https://github.com/beeman"><i class="fa fa-github" aria-hidden="true"></i></a>
+    </li>
+  </ul>
 </nav>
