--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~font-awesome/css/font-awesome.css";
 
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
   padding-top: 5rem;
 }
